# luna-init

./: .gitignore  CMakeLists.txt  README.md
files/conf/: command-resource-handlers.json  default-dock-positions.json  ext-timezones.json  locale.txt  region.json
files/conf/fonts/: Prelude_Font_LICENSE.txt  fonts.tgz  webos-fallback-fonts.xml  webos-system-fonts.xml
src/: abbrevs.py  ext-timezones.json  extract-description.py  gen-ext-timezones.py  mccInfo.json  uiTzInfo.json
